# workshop-django

./: README.md  pyproject.toml
blog/: forms.py  urls.py  views.py
blog/templates/blog/: index.html  perfil.html
mockups/: index.html  perfil.html
mockups/css/: style.css
static/css/: style.css
static/js/: script.js
workshopdjango/: asgi.py  settings.py  urls.py  wsgi.py
